--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,7 +6,9 @@ on:
     branches:
       - main     
       - feature/*  
-
+permissions:
+  packages: write
+  contents: read
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
